# public_projects

./: .gitignore  Dockerfile  README.md  list_models.py  requirements.txt
.github/workflows/: ci.yml  keep-alive.yml
End to End GenAI Agent/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
Hands On Notebooks/: Practical Statistics for Data Scientists.ipynb  [Kaggle] House Prices - Advanced Regression Techniques.ipynb  [Kaggle] Titanic - Machine Learning from Disaster.ipynb
genai_agent/: .env.example  README.md  requirements.txt
genai_agent/demo/: interactive_demo.py
genai_agent/docs/: personal_usage.md
genai_agent/scripts/: keep_alive.py
genai_agent/src/: app.py  engine.py  supabase_logger.py  tools.py
genai_agent/src/migrations/: create_tables.sql
genai_agent/src/prompts/: system_prompt.md
genai_agent/src/static/: index.html  script.js  style.css
ml_platform/demo/: pipeline.py
realtime_ml_system/demo/: online_inference.py
tests/: test_genai_real.py  test_ml_platform_real.py  test_realtime_ml_real.py
